# RM_Infantry-1

./: .gitignore  .mxproject  CMakeLists.txt  LICENSE  RM_frame.ioc  readme.md
Doc/: Infantry_Operation.md
Drivers/CMSIS/Include/: core_cm4.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_gpio.h
Inc/: dac.h  includes.h  init.h  main.h  stm32f4xx_hal_conf.h  tim.h
MDK-ARM/: JLinkLog.txt  RM_frame.uvguix.jianx  RM_frame.uvoptx  RM_frame.uvprojx  drivers_ramp.c  pid.c
MDK-ARM/RM_frame/: RM_frame.axf  RM_frame.build_log.htm  RM_frame.lnp  RM_frame_RM_frame.dep  adc.crf  autoaimtask.crf  bsp_imu.crf  can.crf  cantask.crf  cap2controltask.crf  controltask.crf  dma.crf  functiontask.crf  gpio.crf  gyroreadtask.crf  iwdg.crf  judgetask.crf  main.crf  motortask.crf  pid_regulator.crf  powerlimitationtask.crf  remotetask.crf  spi.crf  stm32f4xx_hal.crf  stm32f4xx_hal_adc.crf  stm32f4xx_hal_adc_ex.crf  stm32f4xx_hal_can.crf  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_gpio.crf  stm32f4xx_hal_iwdg.crf  stm32f4xx_hal_msp.crf  stm32f4xx_hal_pwr.crf  stm32f4xx_hal_pwr_ex.crf  stm32f4xx_hal_rcc.crf  stm32f4xx_hal_rcc_ex.crf  (+9 more)
Src/: adc.c  dac.c  gpio.c  init.c  main.c  stm32f4xx_it.c  tim.c
Tasks/Inc/: AutoAimTask.h  AuxDevice.h  CANTask.h  Cap2ControlTask.h  FunctionTask.h  JudgeTask.h  MotorTask.h  PowerLimitationTask.h  RemoteTask.h  ServoTask.h  bsp_imu.h  fuzzy_pid_regulator.h  offline_check.h  pid.h  pid_regulator.h
Tasks/Src/: AutoAimTask.c  CANTask.c  Cap2ControlTask.c  ControlTask.c  FunctionTask.c  GyroReadTask.c  JudgeTask.c  MotorTask.c  PowerLimitationTask.c  RemoteTask.c  ServoTask.c  bsp_imu.c  fuzzy_pid_regulator.c  offline_check.c  pid.c  pid_regulator.c  pid_regulator_fuzzy.c
modules/: gimbal.c
